--- a/src/app/afl-ladder/afl-ladder.component.html
+++ b/src/app/afl-ladder/afl-ladder.component.html
@@ -3,6 +3,7 @@
 <div style="padding-left:50px">
   <h2 align="left">AFL Ladder for round 23</h2>
   <br><br>
+  <img *ngIf="loading" src="assets/giphy.gif">
   <table>
     <tr align=left>
     <th style="padding-left:10px;padding-right:10px">Team Name</th>
