--- a/src/app/tips/tips.component.html
+++ b/src/app/tips/tips.component.html
@@ -6,6 +6,7 @@
         <h1>Tips for round 1</h1>
       </div>
       <br><br>
+      <img *ngIf="loading" src="assets/giphy.gif">
       <table>
         <tr>
           <th>Date Time</th>
