--- a/src/app/round-results/round-results.component.html
+++ b/src/app/round-results/round-results.component.html
@@ -5,7 +5,8 @@
         <h1>Results for round 1 1998</h1>
     </div>
     <br><br>
- 
+    <img *ngIf="loading" src="assets/giphy.gif">
+
     <table>
       <tr>
         <th>Date Time</th>
