--- a/src/app/head-to-head/head-to-head.component.html
+++ b/src/app/head-to-head/head-to-head.component.html
@@ -15,7 +15,7 @@
 
   <div *ngIf="fixtures.length > 0">
       <br>
-      <table>
+      <table class="table table-striped table-responsive table-sm">
           <tr align="center">
             <th>Season</th>
             <th>Round</th>
