--- a/src/app/round-results/round-results.component.html
+++ b/src/app/round-results/round-results.component.html
@@ -7,6 +7,8 @@
     <br><br>
     <img *ngIf="loading" src="assets/giphy.gif">
 
+    <p>Large screen is {{largeScreen}}</p>
+
     <table class="table table-striped table-responsive">
       <tr>
         <th *ngIf="largeScreen">Date Time</th>
