Style tips table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,11 @@
     Kerrie's footy tipping
   </h1>
   <br><br>
-  <nav mat-tab-nav-bar>
-      <a mat-tab-link routerLink="tips">Tips</a>
-      <a mat-tab-link routerLink="aflLadder">AFL Ladder</a>
-      <a mat-tab-link routerLink="tipLadder">Tipsters Ladder</a>
-      <a mat-tab-link routerLink="aflResults">AFL Results</a>
-      <a mat-tab-link routerLink="admin">Admin</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-light">
+      <a class="nav-item nav-link" routerLink="tips">Tips</a>
+      <a class="nav-item nav-link"  routerLink="aflLadder">AFL Ladder</a>
+      <a class="nav-item nav-link"  routerLink="tipLadder">Tipsters Ladder</a>
+      <a class="nav-item nav-link"  routerLink="aflResults">AFL Results</a>
+      <a class="nav-item nav-link"  routerLink="admin">Admin</a>
   </nav>
   <router-outlet></router-outlet>
