--- a/src/app/tips/tips.component.html
+++ b/src/app/tips/tips.component.html
@@ -7,7 +7,7 @@
       </div>
       <br><br>
       <img *ngIf="loading" src="assets/giphy.gif">
-      <table>
+      <table class="table table-responsive table-striped">
         <tr>
           <th>Date Time</th>
           <th>Venue</th>
