--- a/src/app/tips/tips.component.html
+++ b/src/app/tips/tips.component.html
@@ -1,7 +1,7 @@
 <br><br>
 
 <form name="myForm">
-  <div style="padding-left:50px">
+  <div id="scrollWindow" style="padding-left:50px">
     <div align="left">
         <h1>Tips for round 1</h1>
       </div>
@@ -32,4 +32,5 @@
         <br>
       <app-messages></app-messages>
   </div>
+  <div id="scrollEnd"></div>
 </form>
